--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,25 +1,25 @@
 <li>
-  <a href="{{ site.url }}">
-    <i class="fas fa-home"></i> Home
+  <a href="/publications">
+    Publications
   </a>
 </li>
 <li>
-  <a href="https://github.com/daigofuji/jekyll-foundation-6-starter">
-    <i class="fab fa-github"></i> Source
+  <a href="/data">
+    Data
   </a>
 </li>
 <li>
-  <a href="page-html-unit-test.html">
-    <i class="fas fa-flask"></i> Unit Test
+  <a href="/experiments">
+    Experiments
   </a>
 </li>
 <li>
-  <a href="page-foundation-example.html">
-    <i class="fas fa-magic"></i> Foundation
+  <a href="/newsletter">
+    Newsletter
   </a>
 </li>
 <li>
-  <a href="page-template-example.html">
-    <i class="fas fa-object-group"></i> Template
+  <a href="https://medium.com/platform-land">
+    Blog
   </a>
 </li>
