--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords }}" />
     <!-- Google fonts https://www.google.com/fonts
     ================================================== -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,800|Raleway:400,200,700" rel="stylesheet" type="text/css">
-    <!-- Fount Awesome -->
-    <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,600" rel="stylesheet">
+
 
     <link rel="stylesheet" href="css/app.css">
 
@@ -29,13 +29,13 @@
     <meta property="og:image" content="{{ page.imageurl }}"/>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@{{ site.twitter }}">
-    <meta name="twitter:title" content="{{ page.title }}">
+     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ page.description }}">
     <meta name="twitter:image" content="{{ page.imageurl }}">
   
   </head>        
   <body>
-
+    
     <div class="off-canvas position-right" data-off-canvas id="offCanvas">
       <div class="vertical menu mtl">
         {% include nav.html %}
@@ -49,7 +49,11 @@
 
       <div class="title-bar">
         <div class="title-bar-left">
-          <h4 class="title-bar-title font-heavy mas"><a href="{{ site.url }}">{{ site.brand }}</a></h4>
+          <h4 class="title-bar-title font-heavy mas">
+            <a href="/">
+              {{ site.brand }}
+            </a>
+          </h4>
         </div>
         <div class="title-bar-right mts">
           <div class="show-for-medium menu align-right simple quiet">
@@ -60,50 +64,37 @@
           </ul>
         </div>
       </div>
-
+      
       <div class="grid-container">
 
         {{ content }}
-
-        <footer class="site-footer grid-x grid-padding-x mtl" role="contentinfo">
-          <div class="large-12 cell">
-            <hr>
-            <ul class="menu quiet copyright align-right">
-              <li>
-                <a href="https://twitter.com/{{ site.twitter }}"><i class="fab fa-twitter"></i> @{{ site.twitter }}</a>
-              </li>
-              <li>
-                <a href="https://github.com/{{ site.github }}/"><i class="fab fa-github"></i> @{{ site.github }}</a>
-              </li>
-            </ul>
-            <div class="menu quiet">
-              {% include nav.html %}
-            </div>
+        
+      <footer class="grid-container">
+        <div class="grid-x grid-margin-x">
+          <div class="medium-8 cell">
+            <p>
+              Platform Land is a project led by <a href="https://www.memespring.co.uk">Richard Pope</a>, a senior fellow at the Harvard Kennedy School <a href="https://projects.iq.harvard.edu/digitalhks">digitalHKS Center</a>.
+            </p>
+            <img src="/images/hks.png" alt="Digital HKS logo" width="150px"/>
           </div>
-        </footer>
+          <div class="medium-4 cell">
+            <p>
+        Except where otherwise noted, content on this site is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="licence">Creative Commons Attribution 4.0 International license</a>. 	
+            </p>
+          </div>
+        </div>
+      </footer>
 
-      </div><!-- end .grid-container -->
-
-    </div><!-- end .off-canvas-content -->
-
+    </div><!-- end .grid-container -->
+  </div><!-- end .off-canvas-content -->
     <!-- Loading JavaScripts
     ================================================== -->
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
-    <script src="bower_components/what-input/dist/what-input.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
+<script src="bower_components/what-input/dist/what-input.min.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
-
-    <!-- Google Analytics, change UA code below -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-8418273-8', 'auto');
-      ga('send', 'pageview');
-    </script>
 
   </body>
 </html>
