--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,41 +3,65 @@ h1, h2, h3, h4, h5, h6 {
   text-transform:uppercase;
 }
 
-.font-light {
-  font-weight: 300;
-}
-.font-weight-normal {
-  font-weight: 400;
-}
-.font-bold {
-  font-weight: 700;
-}
-.font-heavy {
-  font-weight: 800;
-}
-
 .title-bar {
-  box-shadow: 0 0 10px rgba(138, 138, 138, 0.3);
-/*
-  .title-bar-right {
-    flex: 2 1 0px;
-  }
-*/
   .title-bar-title {
     font-weight: 800;
   }
+  h3{
+    overflow:hidden;
+    position:relative;
+    top:5px;
+    font-size:40px;
+
+    a {
+      text-decoration:none;
+      color:$primary-color;
+    }
+  }
+  a {
+    text-decoration:underline;
+    color:$primary-color;
+  }
+  .button {
+    border:solid 1px #fff;
+  }
+}
+/*
+.title-bar .cover {
+  z-index:99999;
+  display:block;
+  position:absolute;
+  top:0;
+  left:0;
+  width:300px;
+  height:300px;
+  background: repeating-linear-gradient(45deg,$primary-color, $primary-color 1px, transparent 1px, transparent 3px);
+}
+*/
+
+div.intro {
+  padding-bottom:$global-padding * 2;
+  h2 {
+    font-family:$body-font-family;
+    text-transform:none;
+    color:$black;
+    font-weight:normal;
+    font-size:22px;
+  }
 }
 
-.title-bar {
-  a {
-    text-decoration:none;
-    color:$primary-color;
+@media screen and (min-width: 40em) {
+  div.intro {
+    h2 {
+      font-size:28px;
+    }
   }
 }
 
 section[role=main]{
   min-height:700px;
   padding-top:$global-padding * 2;
+  padding-bottom:$global-padding * 4;
 }
 
 footer {
@@ -52,6 +76,7 @@ footer {
   text-transform:uppercase;
   border:solid 1px;
   background:none!important;
+  font-weight:bold;
 }
 
 .label.in-progress{ 
@@ -64,23 +89,31 @@ footer {
   color:$dark-gray;
 }
 
-
 ul.work {
   margin-top:$global-padding;
-  border-top:solid 1px $medium-gray;
-  padding-top:0;
   li{
     padding-top:$global-padding;
-    border-bottom:solid 1px $medium-gray;
+    border-top:solid 1px $medium-gray;
     h3 {
       text-transform:none;
       color:$black;
       font-family:$body-font-family;
-      span.label {
-        margin-right:3px;
-        position:relative;
-        top:-2px;
-      }
+      font-size:22px;
+    }
+    .label {
+      margin-bottom:$global-margin / 2;
+    }
+  }
+}
+
+@media screen and (min-width: 40em) {
+  ul.work {
+    .label {
+      display:block;
+      float:left;
+      position:relative;
+      top:2px;
+      margin-right:$global-margin / 2;
     }
   }
 }
