--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -4,6 +4,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .title-bar {
+  background-color:$primary-color;
   .title-bar-title {
     font-weight: 800;
   }
@@ -15,12 +16,12 @@ h1, h2, h3, h4, h5, h6 {
 
     a {
       text-decoration:none;
-      color:$primary-color;
+      color:#fff;
     }
   }
   a {
     text-decoration:underline;
-    color:$primary-color;
+    color:#fff;
   }
   .button {
     border:solid 1px #fff;
@@ -39,19 +40,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 */
 
-div.intro {
-  padding-bottom:$global-padding * 2;
+div#intro {
+  padding-bottom:$global-padding * 3;
+  background:$primary-color;
+  position:relative;
+  top:-20px;
+  h1 {
+    color:#fff;
+    width:50%;
+    font-size:40px
+  }
   h2 {
     font-family:$body-font-family;
     text-transform:none;
-    color:$black;
+    color:#fff;
     font-weight:normal;
-    font-size:22px;
+    font-size:23px;
+  }
+  img {
+    width:60%;
+    right:-10%;
+    position:absolute;
+    display:none;
   }
 }
 
 @media screen and (min-width: 40em) {
-  div.intro {
+  div#intro {
     h2 {
       font-size:28px;
     }
