--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,600" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
 
     <!-- favicon
     ================================================== -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
@@ -37,9 +37,9 @@
   <body>
     
     <div class="off-canvas position-right" data-off-canvas id="offCanvas">
-      <div class="vertical menu mtl">
+      <ul class="vertical menu mtl">
         {% include nav.html %}
-      </div>
+      </ul>
       <button class="close-button" aria-label="Close menu" type="button" data-close>
       </button>
     </div><!-- end .off-canvas -->
@@ -56,9 +56,9 @@
           </div>
         {% endif %}
         <div class="title-bar-right">
-          <div class="show-for-medium menu align-right">
+          <ul class="show-for-medium menu align-right">
             {% include nav.html %}
-          </div>
+          </ul>
           <ul class="hide-for-medium menu align-right">
             <li>
               <button class="button small" data-toggle="offCanvas" type="button">
@@ -73,11 +73,17 @@
     
       <footer class="grid-container">
         <div class="grid-x grid-margin-x">
+          <div class="small-12 cell">
+            <img src="/images/hks.png" alt="Digital HKS logo" width="150px"/>  
+            <ul class="show-for-medium menu align-right">
+              {% include nav.html %}
+            </ul>
+
+          </div>
           <div class="medium-8 cell">
             <p>
             Platform Land is a project led by <a href="https://www.memespring.co.uk">Richard Pope</a>, a senior fellow at the Harvard Kennedy School <a href="https://projects.iq.harvard.edu/digitalhks">digitalHKS Center</a>. To get in touch, please email <a href="mailto:richard_pope@hks.harvard.edu">richard_pope@hks.harvard.edu</a>.
             </p>
-            <img src="/images/hks.png" alt="Digital HKS logo" width="150px"/>
           </div>
           <div class="medium-4 cell">
             <p>
@@ -93,9 +99,9 @@
 
      <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
-<script src="bower_components/what-input/dist/what-input.min.js"></script>
-    <script src="bower_components/foundation-sites/dist/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
+<script src="/bower_components/what-input/dist/what-input.min.js"></script>
+    <script src="/bower_components/foundation-sites/dist/js/foundation.min.js"></script>
+    <script src="/js/app.js"></script>
 
   </body>
 </html>
