--- a/_layouts/bibliography.html
+++ b/_layouts/bibliography.html
@@ -1,4 +1,4 @@
-<strong><a ref="{{entry.url}}">{{entry.title}}</a></strong>
+<strong><a href="{{entry.url}}">{{entry.title}}</a></strong>
 <br/>
 {{entry.author}},
 <em>{{entry.journal}}{{entry.publisher}}</em>, {{entry.year}}
