--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,16 @@
 <li>
+  <a href="/definitions">
+    Definitions
+  </a>
+</li>
+<li>
+  <a href="/resources">
+    Resources
+  </a>
+</li>
+<li>
   <a href="/publications">
     Publications
-  </a>
-</li>
-<li>
-  <a href="/data">
-    Data
-  </a>
-</li>
-<li>
-  <a href="/experiments">
-    Experiments
   </a>
 </li>
 <li>
@@ -18,8 +18,4 @@
     Newsletter
   </a>
 </li>
-<li>
-  <a href="https://medium.com/platform-land">
-    Blog
-  </a>
-</li>
+
