--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <li>
-  <a href="/definitions">
-    Definitions
+  <a href="/definitions/definition-of-gaap">
+    Definition of GaaP
   </a>
 </li>
 <li>
