--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <li>
   <a href="/definitions/definition-of-gaap">
-    Definition of GaaP
+    Definitions
   </a>
 </li>
 <li>
-  <a href="/resources">
-    Resources
+  <a href="/mapping">
+    Mapping
   </a>
 </li>
 <li>
@@ -13,6 +13,12 @@
     Publications
   </a>
 </li>
+<li>
+  <a href="/resources">
+    Resources
+  </a>
+</li>
+
 <li>
   <a href="/newsletter">
     Newsletter
