--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
           </div>
           <div class="medium-8 cell">
             <p>
-            Platform Land is a project led by <a href="https://www.memespring.co.uk">Richard Pope</a>, a senior fellow at the Harvard Kennedy School <a href="https://projects.iq.harvard.edu/digitalhks">digitalHKS Center</a>. To get in touch, please email <a href="mailto:richard_pope@hks.harvard.edu">richard_pope@hks.harvard.edu</a>.
+            The Platform Government Initiative is a project led by <a href="https://www.memespring.co.uk">Richard Pope</a>, a senior fellow at the Harvard Kennedy School <a href="https://projects.iq.harvard.edu/digitalhks">digitalHKS Center</a>. To get in touch, please email <a href="mailto:richard_pope@hks.harvard.edu">richard_pope@hks.harvard.edu</a>.
             </p>
           </div>
           <div class="medium-4 cell">
