--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
           <ul class="show-for-medium menu align-right">
             {% include nav.html %}
           </ul>
-          <ul class="hide-for-medium menu align-right">
+          <ul id="menubutton" class="hide-for-medium menu align-right">
             <li>
               <button class="button small" data-toggle="offCanvas" type="button">
                 MENU
